# FourierTransformation

./: .gitignore  CMakeLists.txt  FourierKernel.cl  FourierTransformation.c  Makefile  README.md  scratch.c
FourierTransform/: Makefile  game  main.c
FourierTransform_OpenCl/: CMakeLists.txt  FourierKernel.cl  FourierTransformation.c
include/: platform.h
